cluster/apps/retrom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retrom-ingress
  namespace: retrom-ns
spec:
  rules:
    - host: "retrom-web.capricorn.brendonmccool.com"  # Your hostname
      http:
        paths:
        # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retrom  # The name of the service
                port:
                  number: 3000  # Service Portnumber
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retrom-service-ingress
  namespace: retrom-ns
spec:
  rules:
    - host: "retrom.capricorn.brendonmccool.com"  # Your hostname
      http:
        paths:
        # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retrom  # The name of the service
                port:
                  number: 5101  # Service Portnumber
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: retrom-pgdb-ingress
  namespace: retrom-ns
spec:
  routes:
    - match: HostSNI(`*`)
      services:
        - name: retrom-pgdb
          port: 5432
